--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="container mt-5">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 offset-md-3">
         <div id="todo-list" class="card">
 
           <div class="card-header bg-primary text-white">
